# ot-harjoitustyo-beta

./: .gitignore  README.md  pyproject.toml  schema.sql  tasks.py
documentation/: architecture.md  changelog.md  requirement_specifications.md  worktime.md
dokumentaatio/: arkkitehtuuri.md  changelog.md  tyoaikakirjanpito.md  vaatimusmaarittely.md
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/: kassapaate.py  maksukortti.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: matkakortti-sekvenssikaavio.md  monopoli-luokkakaavio.md
src/: UI.py  coinflip.py  graph.py  main.py  storage.py  user.py
src/db/: engine.py  storage.py
src/tests/: storage_test.py  user_test.py
src/ui/: UI.py  gui.py  ui.py
