[project]
name = "ot-harjoitustyo-beta"
version = "0.1.0"
description = ""
authors = [
    {name = "ellapaella",email = "56979895+ellapaella@users.noreply.github.com"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "invoke (>=2.2.1,<3.0.0)",
    "pyqt5 (>=5.15.11,<6.0.0)",
    "matplotlib (>=3.10.9,<4.0.0)",
    "scipy (>=1.17.1,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)"
]
[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "coverage (>=7.13.5,<8.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pylint (>=4.0.5,<5.0.0)",
    "autopep8 (>=2.3.2,<3.0.0)"
]
