[project]
name = "maksukortti"
version = "0.1.0"
description = "maksamista varten"
authors = [
    {name = "ellapaella",email = "56979895+ellapaella@users.noreply.github.com"}
]
requires-python = "^3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)"
]
